# PulseOne

./: .antigravityignore  .dockerignore  .gitignore  .zshrc  AUTOMATED_EXPORT_VERIFICATION_PLAN.md  CLAUDE.md  CONTROL_AUDIT_LOG.md  CORE_RESTORATION_PLAN.md  CSP_Refactoring_Plan.md  DEPLOYMENT_GUIDELINES.md  DEPLOYMENT_STRATEGY.md  Dockerfile.complete  Dockerfile.linux-builder  Dockerfile.mingw  Dockerfile.mingw-posix  Dockerfile.minimal  Dockerfile.rpi-builder  Dockerfile.windows  Dockerfile.windows-fixed  Dockerfile.windows-quick  E2E_SIM_VERIFICATION_PLAN.md  E2E_Test_Master_Plan.md  EXPORT_GATEWAY_FIX_REPORT.md  HANDOVER_REPORT.md  I18N_PROGRESS.md  IEC61850_DRIVER_PLAN.md  MODBUS_SLAVE_OPERATION_GUIDE.md  MODBUS_SLAVE_PUBLISHER_PLAN.md  MQTT_E2E_Verification_Plan.md  README.md  RECOVERY_PLAN.md  REFACTORING.md  RESTART_HANDOVER.md  SCHEMA_AUDIT_REPORT.md  STATUS_AND_TODO.md  SUPERVISOR_DESIGN.md  TODO.md  Test_Plan.md  WINDOWS_DEPLOY_STATUS.md  WINDOWS_E2E_TEST_PLAN.md  (+52 more)
collector/: CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.dev.backup  Dockerfile.linux-build  Dockerfile.prod  Dockerfile.windows  Makefile  Makefile.backup  Makefile.full  Makefile.original.backup  Makefile.unified.test  Makefile.windows  basic_test.sh  check_dependencies.sh  compile_test_script.sh  core  deep_test.sh  dev.Dockerfile  fix_mqtt_c_library.sh  fix_mqtt_dockerfile.sh  install_collector.sh  install_pulseone_collector.sh  mqtt_test  path_debug  path_debug.cpp  quick_build.sh  quick_test  quick_test.cpp  step8_modbus_initialization_test.cpp  temp_fix_includes.sh  test.c  test_compatibility_bridge  test_compatibility_bridge.cpp  test_new_types  test_new_types.cpp  test_real_new_types  test_real_new_types.cpp  test_unified_driver_base  test_unified_driver_base.cpp  (+6 more)
collector/backup/: DeviceManager.cpp  DeviceManager.h
collector/backup/20250719_232257/: Makefile.backup
collector/backup/20250719_234333/: Makefile.backup
collector/backup/Engine_backup/: AlarmContextEngine.h  DeviceWorker.h  MaintenanceManager.h
collector/config/: .redis copy.env.backup  .redis.env  alarm.env  database.env  redis.env
collector/include/: RPCClient.h  RedisClient.h  RedisClient.hpp
collector/include/Alarm/: AlarmEngine.h  AlarmManager.h  AlarmRepository.h  AlarmStartupRecovery.h  AlarmStatisticsCollector.h  AlarmSuppressor.h  AlarmTypes.h
collector/include/Api/: ConfigApiCallbacks.h  DeviceApiCallbacks.h  HardwareApiCallbacks.h
collector/include/Client/: DBClient.h  MultiDBClient.h  RedisClient.h  RedisClientImpl.h  RedisClusterClient.h
collector/include/Common/: BasicTypes.h  BasicTypes.h.bak  BasicTypes.h.original  Constants.h  DriverError.h  DriverStatistics.h  Enums.h  IProtocolConfig.h  NewTypes.h  ProtocolConfigRegistry.h  ProtocolConfigs.h  Structs.h  Structs.h.backup  UnifiedCommonTypes.h  UnifiedTypes.h  UniversalDeviceMapper.h  Utils.h  Utils.h.backup
collector/include/Core/: Application.h  CollectorApplication.h  CollectorApplication.h.backup
collector/include/Database/: DataAccessManager.h  DatabaseAbstractionLayer.h  DatabaseManager.h  DatabaseTypes.h  DeviceDataAccess.h  ExtendedSQLQueries.h  IDataAccess.h  RepositoryFactory.h  RepositoryHelpers.h  SQLQueries.h  SQLQueries.h.backup
collector/include/Drivers/: BACnetDriver.h  CommonTypes.h  DriverFactory.h  DriverLogger.h  IProtocolDriver.h  ModbusDriver.h  MqttDriver.h  TestUnifiedDriverBase.h  UnifiedModbusDriver.cpp  UnifiedModbusDriver.h
collector/include/Engine/: AlarmContextEngine.h  DeviceIntegration.h  DeviceManager.h
collector/include/Network/: HttpErrorMapper.h  RestApiServer.h
collector/include/Pipeline/: DataProcessingService.h  PipelineManager.h  WorkerPipelineManager.h
collector/include/Platform/: PlatformCompat.h
collector/include/Storage/: BackendFormat.h  RedisDataWriter.h
collector/include/Utils/: ConfigManager.h  LogLevelManager.h  LogLevels.h  LogManager.h  LogManager.h.bak
collector/include/VirtualPoint/: ScriptLibraryManager.h  VirtualPointBatchWriter.h  VirtualPointEngine.h  VirtualPointTypes.h
collector/include/Workers/: WorkerFactory.h  WorkerManager.h
collector/scripts/: run_config_test.sh  test_config_manager.sh
collector/src/: RedisClientImpl.cpp  main.cpp  main.cpp.backup  test_unified_main.cpp
collector/src/Alarm/: AlarmEngine.cpp  AlarmManager.cpp  AlarmStartupRecovery.cpp
collector/src/Api/: ConfigApiCallbacks.cpp  DeviceApiCallbacks.cpp  HardwareApiCallbacks.cpp
collector/src/Client/: RedisClientImpl.cpp
collector/src/Common/: UniversalDeviceMapper.cpp
collector/src/Config/: ConfigManager.cpp
collector/src/Core/: Application.cpp  CollectorApplication.cpp  RestApiServer.cpp
collector/src/Database/: DataAccessManager.cpp  DatabaseAbstractionLayer.cpp  DatabaseManager.cpp  DatabaseManager.cpp.bak  DeviceDataAccess.cpp  DeviceIntegration.cpp  RepositoryFactory.cpp  RepositoryHelpers.cpp
collector/src/Drivers/: BACnetDriver.cpp  DriverFactory.cpp  (+4 more)
collector/test/: test_common_types.cpp  test_driver_logger.cpp  test_mqtt_driver.cpp  test_sample.txt
collector/tests/: CMakeLists.txt  Makefile  Makefile.backup  Makefile.broken_backup  Makefile.simple  complete_mqtt_test.cpp  extracted_create_table.txt  fix_virtual_points.sql  full_test_log.txt  insert_test_alarm_virtual_data.sql  path_corrected_test.cpp  pure_sql.sql  run_pipeline_test.sh  setup_docker_test_env.sh  setup_test_db.sql  setup_test_environment.sh  simple_mqtt_test.cpp  test_config_manager  test_config_manager.cpp  test_minimal_fixed.cpp  test_platform_compat.cpp  test_step1_config.cpp  test_step1_config_connection.cpp  test_step1_config_connection_win.cpp  test_step2_database.cpp  test_step3_protocol_worker.cpp  test_step3_workers.cpp  test_step4_driver_data_validation.cpp  test_step5_complete_db_integration_validation.cpp  test_step6_enhanced_pipeline.cpp  test_step6_full_pipeline.cpp  test_step6_rest_api_worker_reload.cpp  test_step7_rest_api_backend_complete.cpp
core/collector/: CMakeLists.txt  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.windows  Makefile  Makefile.windows  a.out  test.cpp
(+1667 files in other folders)
